<resources>
    <string name="app_name">logindc</string>
    <string name="string_password">       Enter Password</string>
    <string name="string_Login">LOGIN</string>
    <string name="string_signIN">Sign In</string>
    <string name="not_register">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="enter_username"> Enter Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
</resources>