<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background_tint">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        app:srcCompat='@drawable/owl_book'
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/edittext_username"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:hint="@string/enter_username"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:background="#ffffff"
        android:layout_marginTop="30dp"
        android:drawableRight="@drawable/ic_user"
        android:drawableTint="@color/black"/>
    <EditText
        android:id="@+id/edittext_password"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:hint="@string/string_password"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:drawableRight="@drawable/ic_password"
        android:drawableTint="@color/black"/>
    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/string_Login"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/not_register"/>
    <TextView
        android:id="@+id/textview_register"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:text="@string/register"/>



</LinearLayout>